Fixed level result styling. Added overflow scrolling for password levels. Added funny animations for final level.

--- a/src/app/screens/password-game-screen/password-game-screen.component.scss
+++ b/src/app/screens/password-game-screen/password-game-screen.component.scss
@@ -1,7 +1,43 @@
 .screen {
-    //box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+app-password-game {
+  width: inherit;
+  height: inherit;
+}
+
+.screen-header {
+  width: max-content;
+  position: relative;
+  top: -1rem;
+}
+
+.container {
+  flex-direction: column;
+}
+header {
+  position: relative;
+  text-align: center;
+  padding: 50px 0;
+  //overflow: hidden;
+}
+
+
+header h1 {
+  font-size: 4em;
+  color: #000000;
+  text-shadow: 0 0 5px #00ccff, 0 0 10px #00ccff, 0 0 20px #00ccff;
+  animation: rotateText 1200s linear infinite;
+}
+
+@keyframes rotateText {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
